--- a/html/index.html
+++ b/html/index.html
@@ -6,24 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Landing Page</title>
+    <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/nav.css">
 </head>
 
 <body>
-
-    <header class="container">
+    <header>
         <nav class="navbar">
-            <ul>
+            <div class="logo">
+                <img src="../images/react-native.gif" alt="logo" class="rotate">
+            </div>
+            <ul class="navbar-menu" id="navbar-menu">
                 <li><a href="">HOME</a></li>
                 <li><a href="">ABOUT</a></li>
                 <li><a href="">WORK</a></li>
                 <li><a href="">SERVICES</a></li>
                 <li><a href="">CONTACT</a></li>
             </ul>
-
         </nav>
     </header>
-
+    
 </body>
+<script src="../js/nav.js"></script>
 
 </html>
