--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,7 @@
             <div class="logo">
                 <img src="../images/react-native.gif" alt="logo" class="rotate">
             </div>
-            <ul class="navbar-menu" id="navbar-menu">
+            <ul class="navbar-menu">
                 <li><a href="">HOME</a></li>
                 <li><a href="">ABOUT</a></li>
                 <li><a href="">WORK</a></li>
@@ -25,8 +25,12 @@
             </ul>
         </nav>
     </header>
-    
+
+    <section class="welcome">
+        <h1 id="autoescrito">Welcome</h1>
+    </section>
+
 </body>
-<script src="../js/nav.js"></script>
+<script src="../js/autoescrito.js"></script>
 
 </html>
