animacion de imagenes

--- a/html/index.html
+++ b/html/index.html
@@ -30,7 +30,17 @@
         <h1 id="autoescrito">Welcome</h1>
     </section>
 
+    <div class="slider">
+        <img src="../images/html.jpeg" alt="Imagen 1">
+        <img src="../images/css.png" alt="Imagen 2">
+        <img src="../images/bootstrap.png" alt="Imagen 3">
+        <img src="../images/vue.png" alt="Imagen 3">
+    </div>
+
+
+
 </body>
 <script src="../js/autoescrito.js"></script>
+<script src="../js/slide.js"></script>
 
 </html>
