--- a/html/index.html
+++ b/html/index.html
@@ -20,7 +20,7 @@
                 <li><a href="">HOME</a></li>
                 <li><a href="">ABOUT</a></li>
                 <li><a href="">WORK</a></li>
-                <li><a href="">SERVICES</a></li>
+                <li><a href="../html/servicios.html">SERVICES</a></li>
                 <li><a href="">CONTACT</a></li>
             </ul>
         </nav>
@@ -36,9 +36,7 @@
         <img src="../images/bootstrap.png" alt="Imagen 3">
         <img src="../images/vue.png" alt="Imagen 3">
     </div>
-
-
-
+    
 </body>
 <script src="../js/autoescrito.js"></script>
 <script src="../js/slide.js"></script>
