--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,7 @@
     <title>My Landing Page</title>
     <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/nav.css">
+    <link rel="stylesheet" href="../css/chat.css">
 </head>
 
 <body>
@@ -36,9 +37,27 @@
         <img src="../images/bootstrap.png" alt="Imagen 3">
         <img src="../images/vue.png" alt="Imagen 3">
     </div>
+
+    <div id="chatbot-container">
+        <div id="chatbot-window">
+          <div id="chatbot-header">
+            <h3>Chatbot</h3>
+            <button id="chatbot-close-button">X</button>
+          </div>
+          <div id="chatbot-messages"></div>
+          <div id="chatbot-input-container">
+            <input type="text" id="user-input" placeholder="Escribe tu mensaje...">
+            <button id="send-button">Enviar</button>
+          </div>
+        </div>
+        <div id="chatbot-toggle">
+          <img src="../images/logo.png" width="80px" alt="Abrir chat">
+        </div>
+      </div>
     
 </body>
 <script src="../js/autoescrito.js"></script>
 <script src="../js/slide.js"></script>
+<script src="../js/chat.js"></script>
 
 </html>
