creando pagina de contact

--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Landing Page</title>
-  <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../images/mylogo.png" type="image/x-icon">
   <link rel="stylesheet" href="../css/nav.css">
   <link rel="stylesheet" href="../css/chat.css">
   <link rel="stylesheet" href="../css/footer.css">
@@ -17,7 +17,7 @@
   <header>
     <nav class="navbar">
       <div class="logo">
-        <img src="../images/logo.png" alt="logo" class="rotate">
+        <img src="../images/mylogo.png" alt="logo" class="rotate">
       </div>
       <ul class="navbar-menu">
         <li><a href="">HOME</a></li>
