--- a/html/servicios.html
+++ b/html/servicios.html
@@ -11,7 +11,8 @@
 <body>
     <section class="services">
         <h2 class="title">Servicios</h2>
-        <p class="paragrapg">¡Hola! Soy un desarrollador frontend, apasionado por la creación de experiencias web interactivas
+        <p class="paragrapg">¡Hola! Soy un desarrollador frontend, apasionado por la creación de experiencias web
+            interactivas
             y atractivas. <br /> Con conocimientos sólidos en HTML, CSS y JavaScript, puedo convertir tus ideas en
             interfaces de usuario modernas y receptivas.</p>
         <hr>
@@ -57,7 +58,7 @@
                     <img src="../images/js.png" alt="JavaScript">
                     <figcaption>JavaScript</figcaption>
                 </figure>
-            </li>
+            </li>           
         </ul>
     </section>
 </body>
