--- a/html/about.html
+++ b/html/about.html
@@ -13,7 +13,7 @@
         <div class="contenido-seccion">
             <div class="info">
                 <h1>ELLIAM SANCHEZ AGUIRRE</h1>
-                <h2>CODIFICADOR, DISEÑADOR, PROFESIONAL</h2>
+                <h2>CODIFICADOR, DISEÑADOR, FRONTEND</h2>
             </div>
             <div class="foto">
                 <img src="../images/elliam.jpg" alt="elliam">
