--- a/html/index.html
+++ b/html/index.html
@@ -24,7 +24,7 @@
         <li><a href="../html/about.html">ABOUT</a></li>
         <li><a href="">WORK</a></li>
         <li><a href="../html/servicios.html">SERVICES</a></li>
-        <li><a href="">CONTACT</a></li>
+        <li><a href="../html/contact.html">CONTACT</a></li>
       </ul>
     </nav>
   </header>
@@ -42,6 +42,36 @@
     <img src="../images/react.png" alt="Imagen 6">
     <img src="../images/angular.png" alt="Imagen 7">
   </div>
+
+  <div class="parraf1">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio nam voluptates earum dolor laboriosam dicta
+      sed voluptate consequatur, sequi ad qui facilis dolore molestias hic perferendis perspiciatis? Quas, quasi minima.
+      Et quae distinctio alias debitis libero expedita? Earum doloremque, debitis iusto porro cumque maxime animi esse
+      dolor quae quis soluta aspernatur, numquam sunt? Repellat, quibusdam voluptatibus. Modi sint temporibus ipsum!
+      Error minus libero nesciunt ex mollitia nihil commodi eveniet maxime aperiam dolorem nisi rerum ad dolor
+      accusantium quidem iure, ab consequatur dignissimos suscipit ullam veritatis! Illo aut ipsa repudiandae.
+      Dignissimos.</p>
+  </div>
+
+  <div class="parra2">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio nam voluptates earum dolor laboriosam dicta
+      sed voluptate consequatur, sequi ad qui facilis dolore molestias hic perferendis perspiciatis? Quas, quasi minima.
+      Et quae distinctio alias debitis libero expedita? Earum doloremque, debitis iusto porro cumque maxime animi esse
+      dolor quae quis soluta aspernatur, numquam sunt? Repellat, quibusdam voluptatibus. Modi sint temporibus ipsum!
+      Error minus libero nesciunt ex mollitia nihil commodi eveniet maxime aperiam dolorem nisi rerum ad dolor
+      accusantium quidem iure, ab consequatur dignissimos suscipit ullam veritatis! Illo aut ipsa repudiandae.
+      Dignissimos.</p>
+  </div>
+
+  <!-- <div class="parraf3">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio nam voluptates earum dolor laboriosam dicta
+      sed voluptate consequatur, sequi ad qui facilis dolore molestias hic perferendis perspiciatis? Quas, quasi minima.
+      Et quae distinctio alias debitis libero expedita? Earum doloremque, debitis iusto porro cumque maxime animi esse
+      dolor quae quis soluta aspernatur, numquam sunt? Repellat, quibusdam voluptatibus. Modi sint temporibus ipsum!
+      Error minus libero nesciunt ex mollitia nihil commodi eveniet maxime aperiam dolorem nisi rerum ad dolor
+      accusantium quidem iure, ab consequatur dignissimos suscipit ullam veritatis! Illo aut ipsa repudiandae.
+      Dignissimos.</p>
+  </div> -->
 
   <div id="chatbot-container">
     <div id="chatbot-window">
@@ -61,31 +91,35 @@
   </div>
 
   <!-- footer -->
-  <footer class="contacto" id="contacto">
-    <div class="contenido-seccion">
-        <h2 class="titulo-seccion">Contacto</h2>
-        <h3>Ponte en contacto ahora mismo!</h3>
-
-        <div class="fila">
-            <div class="col">
-                <h2>
-                    <i class="fa-solid fa-phone"></i> Teléfono
-                </h2>
-                <span class="info-contacto">+505 85960195</span>
-            </div>
-            <div class="col">
-                <h2>
-                    <i class="fa-solid fa-envelope"></i> Correo
-                </h2>
-                <span class="info-contacto">elliamsanchez510@gmail.com</span>
-            </div>
-            <div class="col">
-                <h2>
-                    <i class="fa-solid fa-globe"></i> Github
-                </h2>
-                <span class="info-contacto">Elliam-Sanchez510</span>
-            </div>
-        </div>
+  <footer>
+    <div class="container">
+      <div class="social-icons">
+        <a href="https://web.whatsapp.com/=+50585960195" target="_blank" class="icon">
+          <img src="../images/WhatsApp.png" alt="whatsapp">
+        </a>
+        <a href="https://www.facebook.com/elliam.sanchez" target="_blank" class="icon">
+          <img src="../images//facebook.png" alt="facebook">
+        </a>
+        <a href="https://www.instagram.com/elliam.sanchez28/" target="_blank" class="icon">
+          <img src="../images/Instagram.png" alt="Instagram">
+        </a>
+        <a href="https://twitter.com/ElliamSánchez" target="_blank" class="icon">
+          <img src="../images/Twitter.png" alt="Twitter">
+        </a>
+        <a href="https://github.com/Elliam-Sanchez510" target="_blank" class="icon">
+          <img src="../images/github.png" alt="github">
+        </a>
+        <a href="https://t.me/Snchez_510" target="_blank" class="icon">
+          <img src="../images/telegram.png" alt="telegram">
+        </a>
+        <a href="mailto:elliamsanchez510@gmail.com" target="_blank" class="icon">
+          <img src="../images/gmail.png" alt="gmail">
+        </a>
+        <a href="https://www.linkedin.com/in/elliam-s%C3%A1nchez-958aaa269/" target="_blank" class="icon">
+          <img src="../images/linkedin.png" alt="linkedin">
+        </a>
+          <p class="copyright">Copyright &copy; 2023 Creado por Elliam Sánchez Aguirre.</p>
+      </div>
     </div>
   </footer>
 
@@ -95,3 +129,4 @@
 <script src="../js/chat.js"></script>
 
 </html>
+</cms>
