modificando estilos en about

--- a/html/contact.html
+++ b/html/contact.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Página de Contacto</title>
+    <link rel="shortcut icon" href="../images/mylogo.png" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="../css/contact.css">
 </head>
 
