--- a/html/index.html
+++ b/html/index.html
@@ -20,9 +20,9 @@
         <img src="../images/mylogo.png" alt="logo" class="rotate">
       </div>
       <ul class="navbar-menu">
-        <li><a href="">HOME</a></li>
+        <li><a href="#">HOME</a></li>
         <li><a href="../html/about.html">ABOUT</a></li>
-        <li><a href="">WORK</a></li>
+        <li><a href="../html/work.html">WORK</a></li>
         <li><a href="../html/servicios.html">SERVICES</a></li>
         <li><a href="../html/contact.html">CONTACT</a></li>
       </ul>
@@ -63,7 +63,7 @@
       Dignissimos.</p>
   </div>
 
-  <!-- <div class="parraf3">
+  <div class="parraf3">
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio nam voluptates earum dolor laboriosam dicta
       sed voluptate consequatur, sequi ad qui facilis dolore molestias hic perferendis perspiciatis? Quas, quasi minima.
       Et quae distinctio alias debitis libero expedita? Earum doloremque, debitis iusto porro cumque maxime animi esse
@@ -71,7 +71,7 @@
       Error minus libero nesciunt ex mollitia nihil commodi eveniet maxime aperiam dolorem nisi rerum ad dolor
       accusantium quidem iure, ab consequatur dignissimos suscipit ullam veritatis! Illo aut ipsa repudiandae.
       Dignissimos.</p>
-  </div> -->
+  </div>
 
   <div id="chatbot-container">
     <div id="chatbot-window">
