eliminando slider de igamenes en index.html

--- a/html/index.html
+++ b/html/index.html
@@ -17,7 +17,7 @@
   <header>
     <nav class="navbar">
       <div class="logo">
-        <img src="../images/mylogo.png" alt="logo" class="rotate">
+        <img src="../images/avatar.png" alt="logo">
       </div>
       <ul class="navbar-menu">
         <li><a href="#">HOME</a></li>
@@ -32,16 +32,6 @@
   <section class="welcome">
     <h1 id="autoescrito">Welcome</h1>
   </section>
-
-  <div class="slider">
-    <img src="../images/html-5.png" alt="Imagen 1">
-    <img src="../images/css-3.png" alt="Imagen 2">
-    <img src="../images/bootstrap.png" alt="Imagen 3">
-    <img src="../images/vue.png" alt="Imagen 4">
-    <img src="../images/js.png" alt="Imagen 5">
-    <img src="../images/react.png" alt="Imagen 6">
-    <img src="../images/angular.png" alt="Imagen 7">
-  </div>
 
   <div class="parraf1">
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio nam voluptates earum dolor laboriosam dicta
