modificando texto en about detalles personales

--- a/html/about.html
+++ b/html/about.html
@@ -29,28 +29,37 @@
         <h3>Detalles personales</h3>
 
         <p class="especial">Me dedico a producir ideas creativas y originales para mis clientes</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, nobis! Sit, veniam aut omnis est suscipit
-            itaque tempore fugiat! Repellat, necessitatibus. Neque quis, reprehenderit fugit dolore voluptate nam
-            eum reiciendis!</p>
+        <p>Soy un apasionado de la creatividad y me encanta trabajar en la generación de ideas innovadoras
+            que satisfagan las necesidades de mis clientes. Utilizo mi experiencia y conocimientos para desarrollar
+            soluciones creativas que destaquen y generen un impacto positivo. Mi enfoque se basa en la búsqueda
+            constante de nuevas perspectivas y en la exploración de diferentes enfoques para encontrar las mejores soluciones.</p>
 
         <div class="fila">
             <div class="col">
                 <i class="fa-solid fa-user"></i>
                 <span class="titulo-detalle">Perfil</span>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis, provident esse. Nesciunt quod
-                    eveniet dolorem necessitatibus iure, suscipit similique provident fugiat excepturi commodi</p>
+                <p>Mi nombre es Elliam Sánchez y soy un desarrollador web apasionado por el diseño y desarrollo
+                    de aplicaciones web interactivas. Aunque actualmente no tengo experiencia profesional,
+                    he invertido tiempo y esfuerzo en adquirir conocimientos y habilidades en programación web.</p>
             </div>
             <div class="col">
                 <i class="fa-solid fa-location-pin"></i>
                 <span class="titulo-detalle">Ubicación</span>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis, provident esse. Nesciunt quod
-                    eveniet dolorem necessitatibus iure, suscipit similique provident fugiat excepturi commodi</p>
+                <p>Soy residente de la ciudad de Nueva Guinea en Nicaragua.</p>
             </div>
             <div class="col">
                 <i class="fa-solid fa-flag"></i>
                 <span class="titulo-detalle">Intereses</span>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis, provident esse. Nesciunt quod
-                    eveniet dolorem necessitatibus iure, suscipit similique provident fugiat excepturi commodi</p>
+                <p>Tengo una amplia gama de intereses tanto en el ámbito profesional como personal. Me apasiona la tecnología
+                     y el desarrollo web, siempre estoy buscando aprender nuevas herramientas y lenguajes de programación para
+                     mejorar mis habilidades. Me encanta seguir las últimas tendencias en diseño web y experiencia de usuario.</p>
+            </div>
+            <div class="col">
+                <i class="fa-solid fa-certificate"></i>
+                <span class="titulo-detalle">Certificaciones</span>
+                <p>He obtenido certificaciones a través de plataformas educativas en línea, como SoloLearn,
+                    que ofrecen cursos y evaluaciones en el campo del desarrollo web. Algunas de mis certificaciones
+                    obtenidas en SoloLearn incluyen: Certificación en HTML5 y CSS3, Certificación en JavaScript y jQuery.</p>
             </div>
         </div>
     </div>
