cambiando estilos de texto en about

--- a/html/about.html
+++ b/html/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet" href="../css/about.css">
 </head>
+
 <body>
 
     <section class="inicio" id="inicio">
@@ -21,125 +23,135 @@
             </div>
         </div>
     </section>
-    
+
     <!-- SOBRE MI -->
-<section class="sobremi" id="sobremi">
-    <div class="contenido-seccion">
-        <h2 class="titulo-seccion">Sobre Mi</h2>
-        <h3>Detalles personales</h3>
+    <section class="sobremi" id="sobremi">
+        <div class="contenido-seccion">
+            <h2 class="titulo-seccion">Sobre Mi</h2>
+            <h3>Detalles personales</h3>
 
-        <p class="especial">Me dedico a producir ideas creativas y originales para mis clientes</p>
-        <p>Soy un apasionado de la creatividad y me encanta trabajar en la generación de ideas innovadoras
-            que satisfagan las necesidades de mis clientes. Utilizo mi experiencia y conocimientos para desarrollar
-            soluciones creativas que destaquen y generen un impacto positivo. Mi enfoque se basa en la búsqueda
-            constante de nuevas perspectivas y en la exploración de diferentes enfoques para encontrar las mejores soluciones.</p>
+            <p class="especial">Me dedico a producir ideas creativas y originales para mis clientes</p>
+            <p class="miperfil">Soy un apasionado de la creatividad y me encanta trabajar en la generación de ideas
+                innovadoras
+                que satisfagan las necesidades de mis clientes. Utilizo mi experiencia y conocimientos para desarrollar
+                soluciones creativas que destaquen y generen un impacto positivo. Mi enfoque se basa en la búsqueda
+                constante de nuevas perspectivas y en la exploración de diferentes enfoques para encontrar las mejores
+                soluciones.</p>
 
-        <div class="fila">
-            <div class="col">
-                <i class="fa-solid fa-user"></i>
-                <span class="titulo-detalle">Perfil</span>
-                <p>Mi nombre es Elliam Sánchez y soy un desarrollador web apasionado por el diseño y desarrollo
-                    de aplicaciones web interactivas. Aunque actualmente no tengo experiencia profesional,
-                    he invertido tiempo y esfuerzo en adquirir conocimientos y habilidades en programación web.</p>
+            <div class="fila">
+                <div class="col">
+                    <i class="fa-solid fa-user"></i>
+                    <span class="titulo-detalle">Perfil</span>
+                    <p class="miperfil">Soy un desarrollador web apasionado por el diseño y desarrollo
+                        de aplicaciones web interactivas. Aunque actualmente no tengo experiencia profesional,
+                        he invertido tiempo y esfuerzo en adquirir conocimientos y habilidades en programación web.</p>
+                </div>
+                <div class="col">
+                    <i class="fa-solid fa-location-pin"></i>
+                    <span class="titulo-detalle">Ubicación</span>
+                    <p class="miperfil">Soy residente de la ciudad de Nueva Guinea en Nicaragua.</p>
+                </div>
+                <div class="col">
+                    <i class="fa-solid fa-flag"></i>
+                    <span class="titulo-detalle">Intereses</span>
+                    <p class="miperfil">Tengo una amplia gama de intereses tanto en el ámbito profesional como personal.
+                        Me apasiona la tecnología
+                        y el desarrollo web, siempre estoy buscando aprender nuevas herramientas y lenguajes de
+                        programación para
+                        mejorar mis habilidades. Me encanta seguir las últimas tendencias en diseño web y experiencia de
+                        usuario.</p>
+                </div>
+                <div class="col">
+                    <i class="fa-solid fa-certificate"></i>
+                    <span class="titulo-detalle">Certificaciones</span>
+                    <div>
+                        <p class="miperfil">He obtenido certificaciones a través de plataformas educativas en línea,
+                            como SoloLearn,
+                            que ofrecen cursos y evaluaciones en el campo del desarrollo web. Algunas de mis
+                            certificaciones
+                            obtenidas en SoloLearn incluyen: Certificación en HTML5 y CSS3, Certificación en JavaScript
+                            y jQuery.</p>
+                    </div>
+                </div>
             </div>
-            <div class="col">
-                <i class="fa-solid fa-location-pin"></i>
-                <span class="titulo-detalle">Ubicación</span>
-                <p>Soy residente de la ciudad de Nueva Guinea en Nicaragua.</p>
+    </section>
+
+    <!-- HABILIDADES -->
+    <section class="habilidades" id="habilidades">
+        <div class="contenido-seccion">
+            <h2 class="titulo-seccion">Mis habilidades</h2>
+            <h3>Me especializo en</h3>
+
+            <div class="fila">
+                <div class="col">
+                    <span>HTML/CSS</span>
+                    <div class="cont-barra">
+                        <div class="barra" id="html">
+                            <!-- mediante javascript luego genereremos 17 barritas con clase e -->
+
+                        </div>
+                        <span>98%</span>
+                    </div>
+                </div>
+                <div class="col">
+                    <span>JAVASCRIPT</span>
+                    <div class="cont-barra">
+                        <div class="barra" id="javascript">
+                            <!-- mediante javascript luego genereremos 17 barritas con clase e -->
+
+                        </div>
+                        <span>70%</span>
+                    </div>
+                </div>
             </div>
-            <div class="col">
-                <i class="fa-solid fa-flag"></i>
-                <span class="titulo-detalle">Intereses</span>
-                <p>Tengo una amplia gama de intereses tanto en el ámbito profesional como personal. Me apasiona la tecnología
-                     y el desarrollo web, siempre estoy buscando aprender nuevas herramientas y lenguajes de programación para
-                     mejorar mis habilidades. Me encanta seguir las últimas tendencias en diseño web y experiencia de usuario.</p>
+            <div class="fila">
+                <div class="col">
+                    <span>WORDPRESS</span>
+                    <div class="cont-barra">
+                        <div class="barra" id="wordpress">
+                            <!-- mediante javascript luego genereremos 17 barritas con clase e -->
+
+                        </div>
+                        <span>90%</span>
+                    </div>
+                </div>
+                <div class="col">
+                    <span>PHOTOSHOP</span>
+                    <div class="cont-barra">
+                        <div class="barra" id="photoshop">
+                            <!-- mediante javascript luego genereremos 17 barritas con clase e -->
+
+                        </div>
+                        <span>85%</span>
+                    </div>
+                </div>
             </div>
-            <div class="col">
-                <i class="fa-solid fa-certificate"></i>
-                <span class="titulo-detalle">Certificaciones</span>
-                <p>He obtenido certificaciones a través de plataformas educativas en línea, como SoloLearn,
-                    que ofrecen cursos y evaluaciones en el campo del desarrollo web. Algunas de mis certificaciones
-                    obtenidas en SoloLearn incluyen: Certificación en HTML5 y CSS3, Certificación en JavaScript y jQuery.</p>
+            <div class="fila">
+                <div class="col">
+                    <span>PHP</span>
+                    <div class="cont-barra">
+                        <div class="barra" id="php">
+                            <!-- mediante javascript luego genereremos 17 barritas con clase e -->
+
+                        </div>
+                        <span>95%</span>
+                    </div>
+                </div>
+                <div class="col">
+                    <span>ILUSTRATOR</span>
+                    <div class="cont-barra">
+                        <div class="barra" id="ilustrator">
+                            <!-- mediante javascript luego genereremos 17 barritas con clase e -->
+
+                        </div>
+                        <span>75%</span>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
-<!-- HABILIDADES -->
-<section class="habilidades" id="habilidades">
-    <div class="contenido-seccion">
-        <h2 class="titulo-seccion">Mis habilidades</h2>
-        <h3>Me especializo en</h3>
-
-        <div class="fila">
-            <div class="col">
-                <span>HTML/CSS</span>
-                <div class="cont-barra">
-                    <div class="barra" id="html">
-                        <!-- mediante javascript luego genereremos 17 barritas con clase e -->
-
-                    </div>
-                    <span>98%</span>
-                </div>
-            </div>
-            <div class="col">
-                <span>JAVASCRIPT</span>
-                <div class="cont-barra">
-                    <div class="barra" id="javascript">
-                        <!-- mediante javascript luego genereremos 17 barritas con clase e -->
-
-                    </div>
-                    <span>70%</span>
-                </div>
-            </div>
-        </div>
-        <div class="fila">
-            <div class="col">
-                <span>WORDPRESS</span>
-                <div class="cont-barra">
-                    <div class="barra" id="wordpress">
-                        <!-- mediante javascript luego genereremos 17 barritas con clase e -->
-
-                    </div>
-                    <span>90%</span>
-                </div>
-            </div>
-            <div class="col">
-                <span>PHOTOSHOP</span>
-                <div class="cont-barra">
-                    <div class="barra" id="photoshop">
-                        <!-- mediante javascript luego genereremos 17 barritas con clase e -->
-
-                    </div>
-                    <span>85%</span>
-                </div>
-            </div>
-        </div>
-        <div class="fila">
-            <div class="col">
-                <span>PHP</span>
-                <div class="cont-barra">
-                    <div class="barra" id="php">
-                        <!-- mediante javascript luego genereremos 17 barritas con clase e -->
-
-                    </div>
-                    <span>95%</span>
-                </div>
-            </div>
-            <div class="col">
-                <span>ILUSTRATOR</span>
-                <div class="cont-barra">
-                    <div class="barra" id="ilustrator">
-                        <!-- mediante javascript luego genereremos 17 barritas con clase e -->
-
-                    </div>
-                    <span>75%</span>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-    
 </body>
 <script src="../js/about.js"></script>
+
 </html>
