creando responsividad en Habilidades en about

--- a/html/work.html
+++ b/html/work.html
@@ -7,7 +7,9 @@
     <link rel="shortcut icon" href="../images/mylogo.png" type="image/x-icon">
 </head>
 <body>
-    <h1>welcome</h1>
+    <script>
+        window: alert("Me descubriste aun estoy trabajando en ello")
+    </script>
     
 </body>
 </html>
