--- a/html/about.html
+++ b/html/about.html
@@ -87,62 +87,54 @@
                     <span>HTML/CSS</span>
                     <div class="cont-barra">
                         <div class="barra" id="html">
-                            <!-- mediante javascript luego genereremos 17 barritas con clase e -->
+                            <!-- mediante javascript genereremos 10 barritas con clase e -->
 
                         </div>
-                        <span>98%</span>
+                        <span>80%</span>
                     </div>
                 </div>
                 <div class="col">
                     <span>JAVASCRIPT</span>
                     <div class="cont-barra">
                         <div class="barra" id="javascript">
-                            <!-- mediante javascript luego genereremos 17 barritas con clase e -->
-
                         </div>
                         <span>70%</span>
                     </div>
                 </div>
             </div>
+
             <div class="fila">
                 <div class="col">
                     <span>WORDPRESS</span>
                     <div class="cont-barra">
                         <div class="barra" id="wordpress">
-                            <!-- mediante javascript luego genereremos 17 barritas con clase e -->
-
                         </div>
-                        <span>90%</span>
+                        <span>75%</span>
                     </div>
                 </div>
                 <div class="col">
                     <span>PHOTOSHOP</span>
                     <div class="cont-barra">
                         <div class="barra" id="photoshop">
-                            <!-- mediante javascript luego genereremos 17 barritas con clase e -->
-
                         </div>
-                        <span>85%</span>
+                        <span>70%</span>
                     </div>
                 </div>
             </div>
+            
             <div class="fila">
                 <div class="col">
-                    <span>PHP</span>
+                    <span>REACT NATIVE</span>
                     <div class="cont-barra">
-                        <div class="barra" id="php">
-                            <!-- mediante javascript luego genereremos 17 barritas con clase e -->
-
+                        <div class="barra" id="react">
                         </div>
-                        <span>95%</span>
+                        <span>70%</span>
                     </div>
                 </div>
                 <div class="col">
                     <span>ILUSTRATOR</span>
                     <div class="cont-barra">
                         <div class="barra" id="ilustrator">
-                            <!-- mediante javascript luego genereremos 17 barritas con clase e -->
-
                         </div>
                         <span>75%</span>
                     </div>
