--- a/html/index.html
+++ b/html/index.html
@@ -68,7 +68,7 @@
       </div>
     </div>
     <div id="chatbot-toggle">
-      <img src="../images/logo.png" width="80px" alt="Abrir chat">
+      <img src="../images/logo.png" width="80px" alt="logo">
     </div>
   </div>
 
