actualizando foto de perfil

--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,6 @@
   <title>My Landing Page</title>
   <link rel="shortcut icon" href="../images/mylogo.png" type="image/x-icon">
   <link rel="stylesheet" href="../css/nav.css">
-  <link rel="stylesheet" href="../css/chat.css">
   <link rel="stylesheet" href="../css/footer.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
@@ -17,7 +16,7 @@
   <header>
     <nav class="navbar">
       <div class="logo">
-        <img src="../images/avatar.png" alt="logo">
+        <img src="../images/foto.png" alt="foto">
       </div>
       <ul class="navbar-menu">
         <li><a href="#">HOME</a></li>
