--- a/html/about.html
+++ b/html/about.html
@@ -19,7 +19,7 @@
                 <h2>CODIFICADOR, DISEÑADOR, FRONTEND</h2>
             </div>
             <div class="foto">
-                <img src="../images/elliam.jpg" alt="elliam">
+                <img src="../images/foto.png" alt="elliam">
             </div>
         </div>
     </section>
