--- a/html/contact.html
+++ b/html/contact.html
@@ -1,28 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 
 <head>
-    <title>Página de Contacto</title>
-    <link rel="shortcut icon" href="../images/mylogo.png" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="../css/contact.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contacto</title>
+    <link rel="stylesheet" href="../css/contact.css">
 </head>
 
 <body>
-    <h1>Contacto</h1>
-    <form id="contactForm">
-        <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" name="nombre" required><br><br>
+    <div class="container">
+        <h1>Contacto</h1>
+        <form id="contactForm">
+            <div class="form-group">
+                <label for="nombre">Nombre:</label>
+                <input type="text" id="nombre" name="nombre" required>
+            </div>
 
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required><br><br>
+            <div class="form-group">
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+            </div>
 
-        <label for="mensaje">Mensaje:</label><br>
-        <textarea id="mensaje" name="mensaje" rows="4" cols="50" required></textarea><br><br>
+            <div class="form-group">
+                <label for="mensaje">Mensaje:</label>
+                <textarea id="mensaje" name="mensaje" rows="4" required></textarea>
+            </div>
 
-        <input type="submit" value="Enviar">
-    </form>
-
-    <script src="../js/contact.js"></script>
+            <button type="submit">Enviar</button>
+        </form>
+    </div>
 </body>
 
 </html>
